--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,12 @@
-{
+﻿{
   "name": "quiz-server",
   "version": "1.0.0",
+  "description": "Quiz platform backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.6.1",
-    "cors": "^2.8.5"
+    "express": "^4.18.2"
   }
 }
